<resources>
    <string name="app_name">Thanks App</string>
    <string name="go_to_telegram">Go to Telegram</string>
    <string name="input_login_message">Для входа введите имя пользователя</string>
    <string name="telegram">Telegram</string>
    <string name="enter">Войти</string>
    <string name="go_to_telegram_message">Или войдите через телеграм-бот</string>
    <string name="input_code">Введите код подтверждения</string>
    <string name="code">Код подтверждения</string>
    <string name="check">Проверить</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Toast_verifyCode_hintTg">Код отправлен в телеграм</string>
    <string name="Toast_verifyCode_hintEmail">Код отправлен на указанную электронную почту</string>
    <string name="helperTextAboutTg">Перейдите в диалог с ботом %s,
        напишите ему что-нибудь после чего повторите процедуру аутентификации</string>
    <string name="helperTextAboutEmail">Проверьте корректность введенной почты %s</string>
    <string name="chooseOrg">Выбрать организацию</string>
    <string name="helperTextStandard">Не пришел код?</string>
    <string name="helperLink"><u>Повторить процедуру аутентификации</u></string>
    <string name="auth_label">Введите имя пользователя</string>
    <string name="get_code_button_label">Получить код</string>
    <string name="confirmation_code_label">Введите код подтверждения</string>
    <string name="incorrect_code">Неверный код</string>
    <string name="auth">Авторизация</string>
    <string name="login_description">Построение культуры признания
    и благодарности</string>
    <string name="login_title">Цифровое спасибо</string>
    <string name="username_label">ФИО</string>
    <string name="greeting_label">Привет, %s!</string>
    <string name="legal_label">Юр.Лицо</string>
    <string name="department_label">Подразделение</string>
    <string name="position_label">Должность</string>
    <string name="hired_label">Дата начала работы</string>
    <string name="role_label">Роль</string>
    <string name="mobile_label">Мобильный номер</string>
    <string name="email_label">Корпоративная почта</string>
    <string name="company_label">Компания</string>
    <string name="lastAuth">Последний вход %s в %s</string>
    <string name="userFio">%s %s %s</string>
    <string name="placeJob">Место работы</string>
    <string name="contactInformation">Контактные данные</string>
    <string name="information">Информация</string>
    <string name="wouldYouLikeToExit">Выйти из профиля?</string>
    <string name="wouldYouLikeToChangeOrg">Сменить организацию?</string>
    <string name="accept">Да</string>
    <string name="decline">Нет</string>
    <string name="whatEditInProfile">Что именно вы хотите отредактировать?</string>
    <string name="explainingAboutPermissions">Вы не дали нам достаточно разрешений.
        Данные разрешения нам нужны для работы с медиа.
        Вы можете разрешить их в настройках телефона.</string>
    <string name="currentOrganisation">Текущая организация</string>
    <string name="explainingAboutPermissionsRational">
        Вы не дали нам достаточно разрешений для работы.
        Данные разрешения нам нужны для работы с медиа.
        Запросить разрешения повторно?</string>
    <string name="wouldYouLikeToSaveImage"> Сохранить изображение?
        </string>
    <string name="avatar">Аватар</string>
    <string name="settings">Настройки</string>
    <string name="stringData">Личную информацию</string>
    <string name="exit">Выйти</string>
    <string name="close">Закрыть</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="contacts">КОНТАКТЫ</string>
    <string name="save">Сохранить</string>
    <string name="surname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="middleName">Отчество</string>
    <string name="spaceWithContent"> %s</string>
    <string name="registration_button_label">Регистрация</string>
    <string name="application_label">Цифровое спасибо</string>
    <string name="enter_button_label">Вход</string>
    <string name="user_name_label">Имя пользователя</string>
    <string name="balance_label">Баланс</string>
    <string name="feed_label">События</string>
    <string name="new_transaction_label">Новая благодарность</string>
    <string name="transaction_result_label">Отправлено</string>
    <string name="period">Выберите период</string>
    <string name="my_count">Мой счет</string>
    <string name="distributed">Распределено:</string>
    <string name="least_distribute">Осталось раздать</string>
    <string name="cancelled">Аннулировано</string>
    <string name="frozen_label">На согласовании</string>
    <string name="will_burn_after">До конца периода \u200b %s дней</string>
    <string name="will_burn_after_2">До конца периода \u200b %s дней</string>
    <string name="will_burn_after_3">До конца периода \u200b %s дней</string>
    <string name="will_burn_today">Сгорят сегодня в 18:00</string>
    <string name="joke">Мы ценим ваше любопытство и в будущих обновлениях обязательно сюда что-нибудь добавим &#128522;</string>
    <string name="send">Поблагодарить</string>
    <string name="addPhoto">Добавить фото</string>
    <string name="reason_transaction">Причина благодарности</string>
    <string name="unsuccessfulSendCoins">Кол-во спасибок, причина благодарности/тег ценности - обязательные поля</string>
    <string name="isAnon">Анонимно</string>
    <string name="addValues">Добавить ценность</string>
    <string name="choiceValues">Выберите ценность</string>
    <string name="choiceReceiver">Выберите получателя</string>
    <string name="applyValues">Применить</string>
    <string name="values">Ценности</string>
    <string name="addedSomeValues">Добавлено %s ценности.Добавить еще?</string>
    <string name="addedOneValue">Добавлена %s ценность.Добавить еще?</string>
    <string name="available">Доступно: \u0020</string>
    <string name="empty">\"\"</string>
    <string name="name">Name</string>
    <string name="tgName">\@%s</string>
    <string name="dateTime">%s в %s</string>
    <string name="received_from">Благодарность от %s</string>
    <string name="G">Ожидает истечения периода отмены</string>
    <string name="sended_to">Благодарность для %s</string>
    <string name="approved">Согласовано</string>
    <string name="on_approval">На согласовании</string>
    <string name="annulled">Аннулировано</string>
    <string name="refused">Отклонен</string>
    <string name="occured">Выполнен</string>
    <string name="allHistory">Вся история</string>
    <string name="received">\u0020\u0020\u0020   Получено  \u0020\u0020\u0020</string>
    <string name="sended">Отправлено</string>
    <string name="cancelTransaction">Отменить благодарность?</string>
    <string name="successfulCancel">Спасибки вернутся на ваш счет :)</string>
    <string name="setTag">#%s</string>
    <string name="forWinningInChallenge">за победу в челлендже</string>
    <string name="inFundOfChallenge">в фонд челленджа</string>
    <string name="message">Сообщение</string>
    <string name="photo">Фотография</string>
    <string name="statusTransfer">Статус благодарности</string>
    <string name="typeTransfer">Тип благодарности</string>
    <string name="reasonOfRefusing">Причина отказа</string>
    <string name="youSended">Вы отправили</string>
    <string name="youGot">Вы получили</string>
    <string name="youWantedToSend">Вы хотели отправить</string>
    <string name="weRefusedYourOperation">Мы отклонили вашу операцию</string>
    <string name="operationWasRefused">Операция была отменена</string>
    <string name="iRefusedMyOperation">Вы отклонили свою операцию</string>
    <string name="comingTransfer">Входящая  благодарность</string>
    <string name="amountThanks">%s спасибок</string>
    <string name="createChallenge">Создать челлендж</string>
    <string name="allChallenge">Все</string>
    <string name="activeChallenge">Активные</string>
    <string name="inputNameChallenge">Название</string>
    <string name="refuse">Отменить</string>
    <string name="then">Продолжить</string>
    <string name="description">Описание</string>
    <string name="dateCloseEvent">Дата завершения события</string>
    <string name="pointAtPrizeFund">Укажите призовой фонд</string>
    <string name="pointAtPrizePool">Укажите количество призовых мест</string>
    <string name="backgroundChallenge">Обложка челленджа</string>
    <string name="lastUpdateChallenge">Обновлен: %s</string>
    <string name="active">Активен</string>
    <string name="completed">Завершён</string>
    <string name="allFieldsAreRequired">Не все поля заполнены</string>
    <string name="challengeWasCreated">Челлендж успешно создан</string>
    <string name="requiredField">Поле обязательно</string>
    <string name="creatorOfChallenge">от %s %s</string>
    <string name="forbiddenSetAPastDate">Запрещено указывать прошедшие даты</string>
    <string name="details">Детали</string>
    <string name="participants">Участники</string>
    <string name="contenders">Претенденты</string>
    <string name="myResult">Мой результат</string>
    <string name="winners">Победители</string>
    <string name="fund">%s спасибок</string>
    <string name="occupiedPrizePool">%s / %s</string>
    <string name="PrizePool">Призовых мест</string>
    <string name="dateEnd">Дата завершения</string>
    <string name="prizeFund">Призовой фонд</string>
    <string name="draft">Черновик</string>
    <string name="gettingReportsActive">Производится прием отчетов</string>
    <string name="gettingReportsFinished">Прием отчетов завершен</string>
    <string name="spaceSevenTimes">\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="result">Результат</string>
    <string name="closeInHeader">Закрыть</string>
    <string name="sendReport">Отправить результат</string>
    <string name="saveWithoutSending">Сохранить без отправки</string>
    <string name="notToPublicResult">Не публиковать результат</string>
    <string name="successCreateReport">Отчет успешно создан</string>
    <string name="refuseInContender">Отклонить</string>
    <string name="applyInContender">Подтвердить</string>
    <string name="applyCheckReport">Отчет был подтвержден</string>
    <string name="deniedCheckReport">Отчет был отклонен</string>
    <string name="closeMyChoice">Отменить</string>
    <string name="describeReason">Укажите причину</string>
    <string name="rejectReport">Отклонить заявку</string>
    <string name="reasonOfRejectionIsNecessary">Причина отклонения обязательна</string>
    <string name="thanksWasGot">+%s</string>
    <string name="updatedDateTime">Обновлено %s в %s</string>
    <string name="reportHolder">Отправитель</string>
    <string name="userSurnameAndName">%s %s</string>
    <string name="OK">Ок</string>
    <string name="someoneToSomeone">\@%s получил %s спасибок от \@%s</string>
    <string name="getFrom">получил от</string>
    <string name="youFromSomeone">Вы получили %s спасибок от \@%s</string>
    <string name="youGetFrom"> получили от </string>
    <string name="youToSomeone">\@%s получил %s спасибок от вас</string>
    <string name="allEvent">Все</string>
    <string name="mineEvent">Мои</string>
    <string name="publicEvent">Публичные</string>
    <string name="you">Вы</string>
    <string name="fromYou">Вас</string>
    <string name="comment">Комментарий</string>
    <string name="comments">Комментарии</string>
    <string name="reactions">Оценки</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="fioSender">%s %s</string>
    <string name="nothing"> </string>
    <string name="detailOfTransaction">Благодарность</string>
    <string name="profile">Профиль</string>
    <string name="history_label">История</string>
    <string name="settings_label">Настройки</string>
</resources>