<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feed_graph"
        android:enabled="true"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed_label"/>
    <item
        android:id="@+id/balance_graph"
        android:enabled="true"
        android:icon="@drawable/ic_balance"
        android:title="@string/balance_label"/>
    <item
        android:id="@+id/transaction_graph"
        android:enabled="false"
        android:title="@string/nothing"/>
    <item
        android:id="@+id/history_graph"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history_label"/>

    <item
        android:id="@+id/settingFragment"
        android:enabled="false"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_label"/>
</menu>