<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_x"
    tools:context=".presentation.fragment.CheckCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textAppearance="@style/Headline4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx"
            android:layout_marginBottom="@dimen/margin_xxx"
            android:text="@string/input_code"
            android:textAppearance="@style/Subtitle1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_huge_h"
            android:hint="@string/confirmation_code_label"
            app:boxStrokeColor="@color/color9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_btn"
            style="@style/DefaultButton"
            app:cornerRadius="@dimen/round_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check" />
    </LinearLayout>
</RelativeLayout>