<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/balanceFragment">

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.historyScreen.HistoryFragment"
        android:label="@string/history_label"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_additionalInfoTransactionBottomSheetFragment2"
            app:destination="@id/additionalInfoTransactionBottomSheetFragment2" />
        <action
            android:id="@+id/action_historyFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.newTransactionScreen.TransactionFragment"
        android:label="@string/new_transaction_label"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/action_transactionFragment_to_transactionResultFragment"
            app:destination="@id/transactionResultFragment" />
        <action
            android:id="@+id/action_transactionFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_transactionFragment_to_listOfValuesFragment4"
            app:destination="@id/listOfValuesFragment4" />
    </fragment>
    <fragment
        android:id="@+id/balanceFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.balanceScreen.BalanceFragment"
        android:label="@string/balance_label"
        tools:layout="@layout/fragment_balance" >
        <action
            android:id="@+id/action_balanceFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.profileScreen.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileBottomSheetFragment"
            app:destination="@id/editProfileBottomSheetFragment" />
    </fragment>
    <fragment
        android:id="@+id/feedFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.feedScreen.FeedFragment"
        android:label="@string/feed_label"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_feedFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_feedFragment_to_additionalInfoFeedItemFragment"
            app:destination="@id/additionalInfoFeedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionResultFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.newTransactionScreen.TransactionResultFragment"
        android:label="@string/transaction_result_label"
        tools:layout="@layout/fragment_transaction_result">
        <action
            android:id="@+id/action_transactionResultFragment_to_transactionFragment"
            app:destination="@id/transactionFragment" />
        <action
            android:id="@+id/action_transactionResultFragment_to_historyFragment"
            app:destination="@id/historyFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <dialog
        android:id="@+id/additionalInfoTransactionBottomSheetFragment2"
        android:name="com.teamforce.thanksapp.presentation.fragment.historyScreen.AdditionalInfoTransactionBottomSheetFragment"
        android:label="AdditionalInfoTransactionBottomSheetFragment" >
        <action
            android:id="@+id/action_additionalInfoTransactionBottomSheetFragment2_to_historyFragment"
            app:destination="@id/historyFragment" />
    </dialog>
    <fragment
        android:id="@+id/editProfileBottomSheetFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.profileScreen.EditProfileBottomSheetFragment"
        android:label="EditProfileBottomSheetFragment" >
        <action
            android:id="@+id/action_editProfileBottomSheetFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/additionalInfoFeedItemFragment"
        android:name="com.teamforce.thanksapp.presentation.fragment.feedScreen.AdditionalInfoFeedItemFragment"
        android:label="@string/detailOfTransaction">
        <action
            android:id="@+id/action_additionalInfoFeedItemFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
    </fragment>
    <dialog
        android:id="@+id/listOfValuesFragment4"
        android:name="com.teamforce.thanksapp.presentation.fragment.newTransactionScreen.ListOfValuesFragment"
        android:label="ListOfValuesFragment" >
        <action
            android:id="@+id/action_listOfValuesFragment4_to_transactionFragment"
            app:destination="@id/transactionFragment" />
    </dialog>
</navigation>