<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".presentation.fragment.challenges.fragmentsViewPager2.CreateReportFragment">
        <LinearLayout
            android:id="@+id/header_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spaceSevenTimes"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                style="@style/Body1.Bold"
                android:text="@string/result"/>
            <TextView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/general_brand"
                android:text="@string/closeInHeader"/>
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/reason_value"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:outlineProvider="none"
            app:cardCornerRadius="@dimen/round_corner_xlarge"
            app:strokeColor="@color/color20"
            app:strokeWidth="@dimen/stroke_size">

            <EditText
                android:id="@+id/message_value_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="78dp"
                android:layout_margin="@dimen/margin_x"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/comment"
                android:textAppearance="@style/Body1.Gray" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/show_attached_img_card"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background" />

                <ImageButton
                    android:id="@+id/detach_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/transparent"
                    android:src="@drawable/ic_cross_white" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/attach_image_btn"
            style="@style/NotFilledButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:paddingVertical="17dp"
            android:text="@string/addPhoto"
            app:icon="@drawable/ic_attach"
            app:iconGravity="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/notToPublicResult"
                android:textColor="@color/general_contrast"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/publicResultSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagsChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            app:chipSpacingVertical="0dp"
            android:layout_marginVertical="8dp">


        </com.google.android.material.chip.ChipGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_value"
            style="@style/EditProfileTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:focusable="false"
            app:endIconDrawable="@drawable/ic_tabler_chevron_right"
            app:endIconMode="custom"
            app:strokeColor="@color/color20"
            app:strokeWidth="@dimen/stroke_size"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_x"
                android:background="@null"
                android:focusable="false"
                android:gravity="top"
                android:hint="@string/choiceValues"
                android:inputType="none"
                android:textAppearance="@style/Body1.Gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="44dp"
            style="@style/DefaultButton"
            android:backgroundTint="@color/general_brand"
            android:paddingVertical="17dp"
            android:text="@string/sendReport"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_without_sending_btn"
            style="@style/NotFilledButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:paddingVertical="17dp"
            app:strokeWidth="0dp"
            android:text="@string/saveWithoutSending"
            />
    </LinearLayout>
</ScrollView>

